--- a/app/src/main/res/layout/activity_overview__day.xml
+++ b/app/src/main/res/layout/activity_overview__day.xml
@@ -6,6 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".Overview_Day">
 
+
+    <TextView
+        android:id="@+id/actual_week_textview"
+        android:layout_width="386dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:paddingTop="5dp"
+        android:textAlignment="center"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="-1dp"
+        tools:layout_editor_absoluteY="6dp" />
+
+
     <ListView
         android:id="@+id/workplace_list_view"
         android:layout_width="match_parent"
