--- a/app/src/main/res/layout/activity_overview__month.xml
+++ b/app/src/main/res/layout/activity_overview__month.xml
@@ -5,19 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Overview_Month">
+
     <TextView
         android:id="@+id/actual_year"
-        android:layout_width="194dp"
+        android:layout_width="373dp"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:paddingTop="5dp"
+        android:text="actual Year"
+        android:textAlignment="center"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:paddingTop="5dp"
-        tools:layout_editor_absoluteX="95dp"
-        tools:layout_editor_absoluteY="6dp"
-        android:textAlignment="center"
-        android:text="actual Year"/>
+        tools:layout_editor_absoluteX="4dp"
+        tools:layout_editor_absoluteY="6dp" />
 
     <ListView
         android:id="@+id/workplace_list_view"
