--- a/app/src/main/res/layout/activity_overview__week.xml
+++ b/app/src/main/res/layout/activity_overview__week.xml
@@ -8,16 +8,16 @@
 
     <TextView
         android:id="@+id/actual_month"
-        android:layout_width="194dp"
+        android:layout_width="365dp"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:paddingTop="5dp"
+        android:textAlignment="center"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:paddingTop="5dp"
-        tools:layout_editor_absoluteX="95dp"
-        tools:layout_editor_absoluteY="6dp"
-        android:textAlignment="center"/>
+        tools:layout_editor_absoluteX="7dp"
+        tools:layout_editor_absoluteY="6dp" />
 
 
     <ListView
