--- a/app/src/main/res/layout/custom_list_layout_details_day.xml
+++ b/app/src/main/res/layout/custom_list_layout_details_day.xml
@@ -130,55 +130,37 @@
 
     <TextView
         android:id="@+id/stop_time"
-        android:layout_width="194dp"
+        android:layout_width="133dp"
         android:layout_height="40dp"
         android:layout_below="@+id/pause_time"
+        android:layout_marginStart="150dp"
         android:layout_toEndOf="@+id/icon_start"
         android:paddingLeft="8dp"
         android:paddingTop="12dp"
         android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_marginStart="150dp"/>
+        android:textStyle="bold" />
 
 
-    <ImageView
-        android:id="@+id/delete_day"
-        android:layout_width="41dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="100dp"
-        android:layout_toRightOf="@id/icon_time"
-        android:clickable="false"
-        android:src="@drawable/ic_delete_white"
-        android:tint="@color/colorAccent"
-        android:visibility="invisible" />
-
-    <ImageView
-        android:id="@+id/edit_day"
-        android:layout_width="45dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/icon_calendar"
-        android:layout_marginLeft="100dp"
-        android:layout_toRightOf="@id/icon_salary"
-        android:clickable="false"
-        android:src="@drawable/ic_edit_white"
-        android:tint="@color/colorAccent"
-        android:visibility="invisible" />
-
-    <ImageView
-        android:id="@+id/add_day"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floating_delete"
         android:layout_width="50dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
+        android:layout_height="50dp"
         android:layout_below="@+id/icon_pause_time"
-        android:layout_marginLeft="100dp"
-        android:clickable="false"
-        android:layout_toRightOf="@id/icon_stop"
-        android:src="@drawable/ic_add_white"
-        android:tint="@color/colorAccent"
+        android:layout_toEndOf="@+id/stop_time"
+        android:scaleType="center"
+        android:src="@drawable/ic_delete_white"
         android:visibility="invisible" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floating_edit"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_above="@+id/floating_delete"
+        android:layout_alignStart="@+id/floating_delete"
+        android:src="@drawable/ic_edit_white"
+        android:visibility="invisible"
+        android:scaleType="center"/>
+
 
 
 </RelativeLayout>
